引用计数算法 reference counting 和idea GC打印 -XX:+PrintGCDetails